@@ -1,3 +1,8 @@
+2005-06-04  Graham Percival  <gperlist@shaw.ca>
+
+	* site/devel/participating/documentation-adding.html: update
+	info about adding docs to make it as friendly as possible.
+
 2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* nl/index.html: zinsbouw.
